
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.4.36) stable; urgency=low

  * oswebservice: getOpsiModules: integrate new backend_getLicensingInfo method with fallback to old backend_info

-- d.oertel <d.oertel@uib.de> Wed, 19 Jan 2022 15:00

opsi-script (4.12.4.35) stable; urgency=low

  * osparser: getMSVersionMap: remove double ReleaseID=
  * osparser: executeWith: AllSigned Hack: use:
        "Get-Content -Path '+ tempfilename +' | Out-String | Invoke-Expression"
  * osparser: new function getMSVersionName: string
  * oslinmount: replace getGeneralConfigValue by configState_getObjects
  * osprocesses: new isProcessChildOf(searchproc,parentproc: string): boolean;
  * new boolean opsi-script function: isProcessChildOf(<searchprocstr>, <parentprocstr>): bool;
    implemented for WLM
  * new opsi-script constant %opsiscriptprocname% represents the name of the
    just running opsi-script process (opsi-script.exe, opsi-script, opsi-script-gui)
    changes in opsiconf, osparser, opsiscript.lpr
  * write now component logs to subdir 'lastprodlogs'
  * osprocesses: isProcessChildOf also for win64
  * oswebservice: sendlog: fix boolean values for append at log_write
  * osfunclin: getProfilesDirListLin fix non standard lines from getent passwd
  * osparser: executewith: powershell: remove a trailing '-file' from programparas
  * osGUIcontrol: skindirectoryDevelopment = '../../../skin';
  * osGUIcontrol: Linux: skindirectoryCompatibility = '/opt/opsi-script/skin';

-- d.oertel <d.oertel@uib.de> Tue, 04 Jan 2022 15:00


opsi-script (4.12.4.34) stable; urgency=low

  * oszip: catch exceptions
  * osparser: fix callingsection parameter in call of SearchForSectionLines
    from producestringlist:getOutstreamFromSection / getReturnlistFromSection
  * powershell AllSigned Hack: type tmpfile | powershell -command -